scenarios/01-simple/http-grpc-split-port/00-client-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: client
  labels:
    app.kubernetes.io/part-of: demo
    team: client
