scenarios/01-simple/http-grpc-split-port/31-backend-a-https-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-a-https-route
  namespace: backend-a
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: https-grpc-multi-namespace-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - https-a.example.test
  rules:
    - backendRefs:
        - name: api
          port: 80
